--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,16 +57,18 @@
 
         <service
             android:name=".services.WordRepeatIntentService"
-            android:exported="false"></service>
+            android:exported="false" />
 
         <receiver
             android:name=".receivers.BootCompletedReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+
+        <activity android:name=".activities.RepeatWordsActivity"></activity>
     </application>
 
 </manifest>
